force-app/main/default/objects/KimbleOne__AllowancePeriodAllowance__c/KimbleOne__AllowancePeriodAllowance__c.object-meta.xml
<CustomObject>
    <label>Allowance Period Allowance</label>
    <nameField>
        <label>Allowance Period Allowance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allowance Period Allowances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>