force-app/main/default/objects/KimbleOne__AllowancePeriodAllowance__c/fields/KimbleOne__AllowanceAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowanceAmount__c</fullName>
    <label>Allowance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>