force-app/main/default/objects/KimbleOne__AllowancePeriodAllowance__c/fields/KimbleOne__AllowanceType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowanceType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Allowance Type</label>
    <referenceTo>KimbleOne__AllowanceType__c</referenceTo>
    <relationshipLabel>Allowance Period Allowances</relationshipLabel>
    <relationshipName>AllowancePeriodAllowances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>